ONM-5786: Fix select scroll overflow

--- a/public/themes/admin/less/_newsletter.less
+++ b/public/themes/admin/less/_newsletter.less
@@ -404,6 +404,7 @@
   span {
     overflow:initial !important;
     overflow-x: hidden !important;
+    overflow-y: hidden !important;
   }
 
   ol {
